k3s/generated_manifests/monitoring/IngressRoute-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.doma.lol`)
      middlewares:
        - name: tinyauth-auth
          namespace: traefik
      services:
        - name: grafana
          port: 80
